CSS File Issue Resolved

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
-    <style rel="stylesheet" href="style.css"></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h5>JavaScript_Harry</h5>
+    <h2>JavaScript_Harry</h2>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, fugit. Odit in quas ullam modi inventore assumenda corrupti at architecto perspiciatis, eos earum ipsa eveniet quisquam. Deserunt expedita odit similique!
+    </p>
     
 </body>
 </html>
