--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>.:: JavaScript Harry ::.</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h2>JavaScript_Harry</h2>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, fugit. Odit in quas ullam modi inventore assumenda corrupti at architecto perspiciatis, eos earum ipsa eveniet quisquam. Deserunt expedita odit similique!
-    </p>
+   
     
 </body>
 </html>
